# kubeshim

./: .editorconfig  .gitignore  .gitlab-ci.yml  .justfile  Cargo.toml  README.md  TODO.md  exec_script  kubeshim.yaml.example  rustfmt.toml
.github/workflows/: checks.yaml  create.yaml
src/: config.rs  kubeconfig.rs  lib.rs  main.rs  proxy.rs  spawn.rs  state.rs
tests/static/: kubeconfig
