[package]
name = "kubeshim"
version = "0.11.0"
authors = ["Evan Pitstick <emp@seclab.in>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
hyper = { version = "0.14.18", features = ["full"] }
dirs = "4.0.0"
log = "0.4.17"
tokio-socks = "0.5.1"
iprange = "0.6.7"
ipnet = "2.5.0"
serde_yaml = "0.8.24"
regex = "1.5.6"
stable-eyre = "0.2.2"
env_logger = "0.9.0"

[dependencies.tokio]
version = "1.18.2"
features = ["rt-multi-thread", "net", "process", "macros", "io-util", "signal"]

[profile.dev]
split-debuginfo = "unpacked"
# Seems broken right now
incremental = true

# https://doc.rust-lang.org/rustc/profile-guided-optimization.html
[profile.release]
lto = true
codegen-units = 1
